// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package std.testdata.service.proto;

option go_package = "namespacelabs.dev/foundation/std/testdata/service/proto";

import "google/protobuf/empty.proto";

message AddFileRequest {
  string filename = 1;
  string contents = 2;
}

message GetFileRequest {
  string filename = 1;
}

message GetFileResponse {
  string contents = 1;
}

service FileService {
  rpc Add(AddFileRequest) returns (google.protobuf.Empty);
  rpc Get(GetFileRequest) returns (GetFileResponse);
}
